[tool.poetry]
name = "tennis-physics"
version = "0.1.0"
description = ""
authors = ["Kenneth Nguyen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
pandas = "^2.2.3"
numpy = "^2.1.3"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
sympy = "^1.13.3"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
